--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 				<div class="toptext">
 					<h2>embed your tweet inside the URL of the image that you upload</h2>
 						<center>
-								<a href="/">home</a>&nbsp;&nbsp;&nbsp;<a href="/about">what is twimgr.com?</a>&nbsp;&nbsp;&nbsp;<a href="/u">upload image</a>&nbsp;&nbsp;&nbsp;<a href="/user">my links <i>({{ username }})</i></a>
+								<a href="/">home</a>&nbsp;&nbsp;&nbsp;<a href="/about">what is twimgr.com?</a>&nbsp;&nbsp;&nbsp;<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;<a href="/user">my twimgr <i>({{ username }})</i></a>
 						</center>
 				</div>
 			</div>
