plenty of little changes, fixes and usablility changes.

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,15 +5,15 @@
 </p>
 
 <p>
-  when people tweet image uploads, they upload their image using any of these fine services
-  <a href="http://twitgoo.com">twitgoo</a>, <a href="http://yfrog.com">yfrog</a> or
-  <a href="http://twitpic.com">twitpic</a> and get a tiny link.
-  they then, proceed to tweet the image link, prefacing the link with their status update.
+  when users tweet image uploads, they upload their image using one of the many
+  <a href="http://mashable.com/2009/05/19/twitter-share-images/">fine image upload services</a> and
+  get a tiny link which points to the image they just uploaded. users then
+  proceed to tweet the image link, prefacing the link with their status update.
 </p>
 
 <p>
-  so we wondered if we could be <b>super terse</b> and merge the status update inside the
-  link that the image gets uploaded to and so i built <a href="/">twimgr.com</a>.
+  so we wondered if we could be <b>super terse</b> and merge the status update to sit
+  inside the link that the image gets uploaded to. and so we built <a href="/">twimgr.com</a>.
 </p>
 
 <p>
@@ -25,8 +25,21 @@
 </p>
 
 <p>
-  if pictures aren't your thing, <a href="/">twimgr.com</a> does this:
-  instead of saying <a href="http://twitter.com/MeRRyuMMy/status/6014406834">this</a>, you can just
-  say <a href="http://twitter.com/ps3btc/status/6015150399">this</a>.
+  if pictures aren't your thing, using <a href="/">twimgr.com</a>
+  you can say <a href="http://twitter.com/ps3btc/status/6015150399">this</a> instead of
+  saying <a href="http://twitter.com/MeRRyuMMy/status/6014406834">this</a>.
 </p>
+
+<p>
+  your images and status updates are yours. your data is hosted on google appengine. and we love <a href="http://en.wikipedia.org/wiki/CamelCase">CamelCase</a>.
+</p>
+
+<p>
+  and finally, if you are lazy and don't like providing a status message, then we will autogenerate one for you,
+  just like we do <b><a href="http://www.twimgr.com/ILikeNumber0x30de9">http://www.twimgr.com/ILikeNumber0x30de9</a></b>.
+</p>
+<p>
+  <a href="http://www.twimgr.com/ILikeNumber0x30de9"><img src="http://www.twimgr.com/img?img_id=agRkMDhochILEgtJbWFnZU9iamVjdBiJJww" alt="ILikeNumber0x30de9"/></a>
+</p>
+
 {% endblock %}
