--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 				<div class="toptext">
 					<h2>embed your tweet inside the URL of the image that you upload</h2>
 						<center>
-								<a href="/">home</a>&nbsp;&nbsp;&nbsp;<a href="/about">what is twimgr.com?</a>&nbsp;&nbsp;&nbsp;<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;<a href="/user">my twimgr <i>({{ username }})</i></a>
+								<a href="/">home</a>&nbsp;&nbsp;&nbsp;<a href="/about">what is twimgr.com?</a>&nbsp;&nbsp;&nbsp;<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;<a href="/user/{{ username }}">my twimgr <i>({{ username }})</i></a>
 						</center>
 				</div>
 			</div>
@@ -23,9 +23,9 @@
 				<div id="footer">
 						<center>
 								&copy; <a href="http://twitter.com/hnag">Hareesh Nagarajan</a> 2009&nbsp;
-								<a href="http://www.twitter.com" target="_blank">
-										<img src="/stylesheets/powered-by-twitter-sig.gif">
-								</a>
+                <center>
+                  <img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" /></a>
+                </center>
 						</center>
 				</div>
 				<script type="text/javascript">
