add meta tags and the google webmaster verification

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,12 @@
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:tg="http://twitgoo.com" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
   <head>
 		<link href="/stylesheets/main.css" rel="stylesheet" type="text/css"/>
+		<meta name="google-site-verification" content="7KYgTyhVWmUIcsjQ3d-EZ8Ab3Kka8dMXPykiXMPeRxs" />
+		<meta name="robots" content="index,follow" />
+		<meta name="language" content="en" />
+		<meta name="keywords" content="twitter tweet twimgr twitgoo twitpic picture image upload update status post video pic photo tinypic" />
+		<meta name="description" content="Twimgr lets you embed your tweet inside the URL of the image that you upload. Share your pictures on twitter with Twimgr!" />
 	</head>
   <title>twimgr.com embed your tweet inside the URL of the image that you upload</title>
 	<body>
