show header as image title when we are only displaying 1 image

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="top_black">
 				<div class="toptext">
-					<h2>embed your tweet inside the URL of the image that you upload</h2>
+					<h2>{{ header }}</h2>
 						<center>
 								<a href="/">home</a>&nbsp;&nbsp;&nbsp;<a href="/about">what is twimgr.com?</a>&nbsp;&nbsp;&nbsp;<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;<a href="/user/{{ username }}">my twimgr <i>({{ username }})</i></a>
 						</center>
