--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,12 @@
 <img alt="{{ image.content }}" title="{{ image.content }}" src="/img?img_id={{ image.key }}"</img>
 <p>
 	uploaded by <a href="/user/{{ image.author.nickname }}">{{ image.author.nickname }}</a> to <b><a href="/{{ image.content }}">{{ image.content }}</a></b>&nbsp;
-  <a href=http://twitter.com/home?status=http://twimgr.com/{{ image.content }}><img src="http://twitter-badges.s3.amazonaws.com/t_mini-b.png" alt="tweet this" style="border-style: none"/></a>
+  <a href=http://twitter.com/home?status=http://twimgr.com/{{ image.content }}><img src="http://twitter-badges.s3.amazonaws.com/t_mini-b.png" title="tweet this" alt="tweet this" style="border-style: none"/></a>
+
+  {# only show the delete icon if you own the image#}
+	{#% ifequal image.author.nickname username.author.nickname %#}
+	{#% endifequal %#}
+	<a href="/delete/{{ image.content }}"><img src="/trash.gif" alt="delete image" title="delete image" style="border-style: none"/></a>
 </p>
 {% endfor %}
 {% endblock %}
