--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,13 @@
 {% for image in image_list %}
 <img alt="{{ image.content }}" title="{{ image.content }}" src="/img?img_id={{ image.key }}"</img>
 <p>
-	uploaded by <a href="/user/{{ image.author.nickname }}">{{ image.author.nickname }}</a> to <b><a href="/{{ image.content }}">{{ image.content }}</a></b>&nbsp;
+	uploaded by <a href="/user/{{ image.author.email }}">{{ image.author.nickname }}</a> to <b><a href="/{{ image.content }}">{{ image.content }}</a></b>&nbsp;
   <a href=http://twitter.com/home?status=http://twimgr.com/{{ image.content }}><img src="/tweet_this.png" title="tweet this" alt="tweet this" style="border-style: none"/></a>
-	{% if show_trash %}
+	{%ifequal image.author.email username %}
+	{#% if show_trash %#}
 	<a href="/delete/{{ image.content }}"><img src="/trash.gif" alt="delete image" title="delete image" style="border-style: none"/></a>
-	{% endif %}
+	{#% endif %#}
+	{% endifequal %}
 </p>
 {% endfor %}
 {% endblock %}
