update the favicon and some cosmetic changes to the css.

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,7 @@
 				</div>
 				<div id="footer">
 						<center>
-								&copy; <a href="http://twitter.com/hnag">Hareesh Nagarajan</a> 2009&nbsp;
-                <center>
-                  <img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" /></a>
-                </center>
+								twimgr.com &copy; <a href="http://linkybinky.appspot.com">linkybinky</a> 2009. <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
 						</center>
 				</div>
 				<script type="text/javascript">
