add view count and time since image upload

--- a/templates/about.html
+++ b/templates/about.html
@@ -36,10 +36,7 @@
 
 <p>
   and finally, if you are lazy and don't like providing a status message, then we will autogenerate one for you,
-  just like we do <b><a href="http://twimgr.com/ILikeNumber0x30de9">http://twimgr.com/ILikeNumber0x30de9</a></b>.
-</p>
-<p>
-  <a href="http://www.twimgr.com/ILikeNumber0x30de9"><img src="http://www.twimgr.com/img?img_id=agRkMDhochILEgtJbWFnZU9iamVjdBiJJww" alt="ILikeNumber0x30de9"/></a>
+  just like we do here <b><a href="http://twimgr.com/ILikeNumber0x30de9">http://twimgr.com/ILikeNumber0x30de9</a></b>.
 </p>
 
 {% endblock %}
