--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -45,9 +45,14 @@ margin-top:5px;
 .special {
 background-color:#e4e4e4;
 border:1px solid #ccc;
-padding:10px;
+padding:2px;
 }
-
+.views {
+background-color:#ff9;
+border:1px solid #ccc;
+padding:2px;
+font-size:12px}
+}
 .white {
 color:#fff;}
 
