--- a/templates/base.html
+++ b/templates/base.html
@@ -21,14 +21,13 @@
 			<div class="mainsub">
 				<p>
 						<center><p><a name="fb_share" type="button_count"href=" http://www.facebook.com/sharer.php">Share on facebook</a><script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script></p></center>
-				
 					<center>
 						{% block content %}{% endblock %}
 					</center>
 				</div>
 				<div id="footer">
 						<center>
-								twimgr.com &copy; <a href="http://linkybinky.appspot.com">linkybinky</a> 2009. <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
+								twimgr.com &copy; <a href="http://linkybinky.appspot.com">linkybinky</a> 2009 <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
 						</center>
 				</div>
 				<script type="text/javascript">
