add handler to show all images ordered by views

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,11 @@
 				<div class="toptext">
 					<h2>{{ header }}</h2>
 						<center>
-								<a href="/">home</a>&nbsp;&nbsp;&nbsp;<a href="/about">what is twimgr.com?</a>&nbsp;&nbsp;&nbsp;<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;<a href="/user/{{ username }}">my twimgr <i>({{ username }})</i></a>
+								<a href="/">home</a>&nbsp;&nbsp;&nbsp;
+								<a href="/about">about</a>&nbsp;&nbsp;&nbsp;
+								<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;
+								<a href="/all">all</a>&nbsp;&nbsp;&nbsp;
+								<a href="/user/{{ username }}">my twimgr <i>({{ username }})</i></a>
 						</center>
 				</div>
 			</div>
