--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 				</div>
 				<div id="footer">
 						<center>
-								twimgr.com &copy; <a href="http://linkybinky.appspot.com">linkybinky</a> 2009 <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
+								twimgr.com &copy; <a href="http://www.linkybinky.com">linkybinky</a> 2009 <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
 						</center>
 				</div>
 				<script type="text/javascript">
