--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:tg="http://twitgoo.com" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:tg="http://twimgr.com" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
   <head>
 		<link href="/stylesheets/main.css" rel="stylesheet" type="text/css"/>
 		<meta name="google-site-verification" content="7KYgTyhVWmUIcsjQ3d-EZ8Ab3Kka8dMXPykiXMPeRxs" />
@@ -12,12 +12,10 @@
 	<body>
 		<div class="top_black">
 				<div class="toptext">
-					<h2>{{ header }}</h2>
-						<center>
-								<a href="/">home</a>&nbsp;&nbsp;&nbsp;
+									<center>
+<b> {{ header }}</b> &nbsp;&nbsp;&nbsp;
 								<a href="/about">about</a>&nbsp;&nbsp;&nbsp;
 								<b><a href="/u">upload image</a></b>&nbsp;&nbsp;&nbsp;
-								<a href="/all">all</a>&nbsp;&nbsp;&nbsp;
 								<a href="/user/{{ username }}">my twimgr <i>({{ username }})</i></a>
 						</center>
 				</div>
@@ -31,7 +29,7 @@
 				</div>
 				<div id="footer">
 						<center>
-								twimgr.com &copy; <a href="http://www.linkybinky.com">linkybinky</a> 2009 <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
+								<a href="/">twimgr.com</a> &copy; <a href="http://www.linkybinky.com">linkybinky</a> 2009 <a href="http://www.twitter.com" target="_blank"><img src="/stylesheets/powered-by-twitter-sig.gif">							
 						</center>
 				</div>
 				<script type="text/javascript">
