1) memcache for pages without signed in users.
2) just show 4 images in the home page.

--- a/templates/new_home.html
+++ b/templates/new_home.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+<pre>most recent uploads</pre>
 {% for image in image_list %}
 <a href="/{{ image.content }}"><img border=0 alt="{{ image.full_text }}" title="{{ image.full_text }}" src="/tiny?img_id={{ image.key }}"</img></a>
 {% endfor %}
+{% if show_all_link %}
+<pre><a href="/all">view all</a></pre>
+{% endif %}
 {% endblock %}
